Closed Bug 573944 Opened 14 years ago Closed 14 years ago

Invalidate windowless plugins on instantiation

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla2.0b1

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
When a windowless plugin is instantiated, we need to invalidate its area. Some plugins (e.g. our test plugin) may not invalidate their area on instantiation themselves, so we might not get around to painting them unless something else intervenes. This is especially a problem with retained layers where we need the invalidation to tell us to update our cached buffers.
Attachment #453338 - Flags: review?(joshmoz)
Attachment #453338 - Flags: review?(joshmoz) → review+
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/a1dffbacfea8
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla1.9.3a6
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: