b=573944 invalidate windowless plugins on instantiation r=josh